--- a/arch/arm64/boot/dts/lge/msm8992-bullhead.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8992-bullhead.dtsi
@@ -74,6 +74,7 @@
 		spi-max-frequency = <25000000>;
 
 		qcom,use-bam;
+		qcom,rt-priority;
 		qcom,bam-consumer-pipe-index = <12>;
 		qcom,bam-producer-pipe-index = <13>;
 
