treewide: Apply -Os to some drivers
This reduces the size of some drivers that aren't performance-critical.
Also, this workarounds the horrible subsystem inconsistencies between -Os and -O2.

md: Doing this reduced image size by ~300K.

Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>
Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -73,3 +73,5 @@ obj-$(CONFIG_USB_CDC_PHONET)   += usb/
 
 obj-$(CONFIG_HYPERV_NET) += hyperv/
 obj-$(CONFIG_NTB_NETDEV) += ntb_netdev.o
+
+subdir-ccflags-y := -Os
