--- a/drivers/usb/Makefile
+++ b/drivers/usb/Makefile
@@ -58,3 +58,5 @@ obj-$(CONFIG_USB_RENESAS_USBHS)	+= renesas_usbhs/
 obj-$(CONFIG_USB_GADGET)	+= gadget/
 
 obj-$(CONFIG_USB_COMMON)	+= usb-common.o
+
+subdir-ccflags-y := -Os
