--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -1948,7 +1948,11 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_POWER_AVS_MSM is not set
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
-# CONFIG_MSM_IDLE_STATS is not set
+CONFIG_MSM_IDLE_STATS=y
+CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
+CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
+CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
+CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
