Revert "shadow_defconfig: omit frame pointer"
break stacktraces doesn't worth it.

This reverts commit ad52d4d88bc3e8b181b4a38ed26fb133fe38cdb4.

Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -3760,7 +3760,7 @@ CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
-# CONFIG_FRAME_POINTER is not set
+CONFIG_FRAME_POINTER=y
 
 #
 # RCU Debugging
