--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -445,17 +445,9 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=64
-CONFIG_WAKE_BOOST_DURATION_MS=1500
-CONFIG_INPUT_BOOST_FREQ_LP=960000
-CONFIG_INPUT_BOOST_FREQ_PERF=633600
-CONFIG_MAX_BOOST_FREQ_LP=1440000
-CONFIG_MAX_BOOST_FREQ_PERF=1824000
-CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=0
-CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=633600
+# CONFIG_CPU_INPUT_BOOST is not set
 
 #
 # ARM CPU frequency scaling drivers
