shadow_defconfig: Update defconfig
Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -81,7 +81,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
-CONFIG_TASK_DELAY_ACCT=y
+# CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 
@@ -485,7 +485,7 @@ CONFIG_XFRM_ALGO=y
 CONFIG_XFRM_USER=y
 # CONFIG_XFRM_SUB_POLICY is not set
 # CONFIG_XFRM_MIGRATE is not set
-CONFIG_XFRM_STATISTICS=y
+# CONFIG_XFRM_STATISTICS is not set
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
@@ -3516,7 +3516,7 @@ CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 # CONFIG_MSM_OCMEM_DEBUG is not set
 # CONFIG_MSM_OCMEM_POWER_DISABLE is not set
-CONFIG_MSM_BOOT_STATS=y
+# CONFIG_MSM_BOOT_STATS is not set
 CONFIG_MSM_SCM=y
 # CONFIG_MAXIMUM_CURRENT_THROTTLING is not set
 CONFIG_MSM_CPU_PWR_CTL=y
@@ -3825,6 +3825,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_XOR_BLOCKS=y
 CONFIG_CRYPTO=y
 
 #
