--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -3069,11 +3069,13 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
+# CONFIG_SYNC_DEBUG is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
