shadow_defconfig: Disable memory dump
Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -152,7 +152,6 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
-CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
 CONFIG_EPOLL=y
@@ -386,11 +385,10 @@ CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 #
 CONFIG_BINFMT_ELF=y
 CONFIG_COMPAT_BINFMT_ELF=y
-# CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
-CONFIG_COREDUMP=y
+# CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
 
 #
@@ -3347,8 +3345,7 @@ CONFIG_MSM_QDSP6_APRV2=y
 # CONFIG_MSM_QDSP6_APRV3 is not set
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_MEMORY_DUMP is not set
-CONFIG_MSM_MEMORY_DUMP_V2=y
-CONFIG_MSM_DEBUG_LAR_UNLOCK=y
+# CONFIG_MSM_MEMORY_DUMP_V2 is not set
 # CONFIG_MSM_DDR_HEALTH is not set
 # CONFIG_MSM_COMMON_LOG is not set
 CONFIG_MSM_WATCHDOG_V2=y
