shadow_defconfig: Disable memory security features
Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -171,7 +171,7 @@ CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_COMPAT_BRK=y
+# CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
@@ -3862,4 +3862,4 @@ CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
-CONFIG_STRICT_MEMORY_RWX=y
+# CONFIG_STRICT_MEMORY_RWX is not set
