--- a/arch/arm64/configs/shadow_defconfig
+++ b/arch/arm64/configs/shadow_defconfig
@@ -1074,7 +1074,7 @@ CONFIG_QSEECOM=y
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QCOM_LIQUID_DOCK is not set
 CONFIG_EARJACK_DEBUGGER=y
-CONFIG_UID_CPUTIME=y
+CONFIG_UID_SYS_STATS=y
 # CONFIG_C2PORT is not set
 
 #
